Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       <p>Consulta o descarga el documento completo del proyecto <strong>Hire-U</strong> en formato PDF.</p>
 
       <div class="pdf-viewer">
-        <iframe src="img/Documento proyecto normas APA (5).pdf" title="Documento PDF Hire-U"></iframe>
+        <iframe src="img/Documento proyecto normas APA 2.0(1)" title="Documento PDF Hire-U"></iframe>
       </div>
 
-      <a href="img/Documento proyecto normas APA (5).pdf" target="_blank" class="pdf-btn">Ver o Descargar PDF</a>
+      <a href="img/Documento proyecto normas APA 2.0(1)" target="_blank" class="pdf-btn">Ver o Descargar PDF</a>
     </section>
     <!-- FIN SECCIÓN PDF -->
     <!-- FIN NUEVA SECCIÓN -->
@@ -139,3 +139,4 @@
   </script>
 </body>
 </html>
+
